Bug 141994 - EDITING Addition of image to Writer document is not change tracked
Summary: EDITING Addition of image to Writer document is not change tracked
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords:
: 142699 (view as bug list)
Depends on:
Blocks: Track-Changes-Image
  Show dependency treegraph
 
Reported: 2021-04-30 13:51 UTC by NISZ LibreOffice Team
Modified: 2021-12-14 14:37 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Example file from Writer with image (20.42 KB, application/vnd.oasis.opendocument.text)
2021-04-30 13:51 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem in Writer (47.28 KB, image/png)
2021-04-30 13:51 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-04-30 13:51:29 UTC
Created attachment 171535 [details]
Example file from Writer with image

This is a followup to bug #59463
Inserting an image into a change tracked Writer document does not generate change tracking entry.

Steps to reproduce:
    1. Create a new document
    2. Enable change tracking: Edit – Track Changes - Record
    3. Insert – Image and insert one

Actual results:
The Manage Changes dialog does not display a new change.

Expected results:
Manage Changes should display a new change that can be accepted/rejected.

LibreOffice details:
Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: eeb2854e085fdd9f7a38d6e952a8aedf43e90323
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2021-04-30 13:51:50 UTC
Created attachment 171536 [details]
Screenshot of the problem in Writer
Comment 2 Commit Notification 2021-06-10 07:07:47 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/68b6004fe9df184bcbaf46dd53abfec228219df6

tdf#141994 track changes: record insertion of images

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 BogdanB 2021-06-15 05:17:28 UTC
Working well in 
Version: 7.2.0.0.beta1+ / LibreOffice Community
Build ID: d376297c643785564e7bda1a74b573c35ade6cb8
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 4 NISZ LibreOffice Team 2021-06-22 14:35:17 UTC
*** Bug 142699 has been marked as a duplicate of this bug. ***
Comment 5 NISZ LibreOffice Team 2021-07-05 06:09:06 UTC
Verified in:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 0afa7e64d547a8f2a48402660acf5c95a468a0ab
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded
Comment 6 Stéphane Guillou (stragu) 2021-12-14 14:37:46 UTC
Verified as fixed in:

Version: 7.2.4.1 / LibreOffice Community
Build ID: 27d75539669ac387bb498e35313b970b7fe9c4f9
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

And added to the 7.2 release notes: https://wiki.documentfoundation.org/index.php?title=ReleaseNotes/7.2&diff=425704&oldid=425533